// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RankSummary ACT theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiBox-root css-1varnae"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiTableContainer-root css-1taekw1-MuiPaper-root-MuiTableContainer-root"
    >
      <table
        class="MuiTable-root css-12qj9wf-MuiTable-root"
      >
        <thead
          class="MuiTableHead-root css-15wwp11-MuiTableHead-root"
        >
          <tr
            class="MuiTableRow-root MuiTableRow-head css-mjudad-MuiTableRow-root"
          >
            <th
              class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall css-bq0sug-MuiTableCell-root"
              scope="col"
            >
              Rank Summary
            </th>
          </tr>
        </thead>
        <tbody
          class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
        >
          <tr
            class="MuiTableRow-root css-29diad-MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-u73j2r-MuiTableCell-root"
            >
              1
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1u3fssd-MuiTableCell-root"
            >
              FAFSA
            </td>
          </tr>
          <tr
            class="MuiTableRow-root css-29diad-MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-u73j2r-MuiTableCell-root"
            >
              2
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1u3fssd-MuiTableCell-root"
            >
              SAT Scores
            </td>
          </tr>
          <tr
            class="MuiTableRow-root css-29diad-MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-u73j2r-MuiTableCell-root"
            >
              3
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1u3fssd-MuiTableCell-root"
            >
              Website Inquiry
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`RankSummary ACT_ET theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiBox-root css-1varnae"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation3 MuiTableContainer-root css-1in8fko-MuiPaper-root-MuiTableContainer-root"
    >
      <table
        class="MuiTable-root css-hyky7i-MuiTable-root"
      >
        <thead
          class="MuiTableHead-root css-15wwp11-MuiTableHead-root"
        >
          <tr
            class="MuiTableRow-root MuiTableRow-head css-mjudad-MuiTableRow-root"
          >
            <th
              class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall css-1troq67-MuiTableCell-root"
              scope="col"
            >
              Rank Summary
            </th>
          </tr>
        </thead>
        <tbody
          class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
        >
          <tr
            class="MuiTableRow-root css-29diad-MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-18bw1kn-MuiTableCell-root"
            >
              1
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1kfd3qh-MuiTableCell-root"
            >
              FAFSA
            </td>
          </tr>
          <tr
            class="MuiTableRow-root css-29diad-MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-18bw1kn-MuiTableCell-root"
            >
              2
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1kfd3qh-MuiTableCell-root"
            >
              SAT Scores
            </td>
          </tr>
          <tr
            class="MuiTableRow-root css-29diad-MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-18bw1kn-MuiTableCell-root"
            >
              3
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1kfd3qh-MuiTableCell-root"
            >
              Website Inquiry
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`RankSummary ENCOURA theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiBox-root css-1varnae"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiTableContainer-root css-t87vfs-MuiPaper-root-MuiTableContainer-root"
    >
      <table
        class="MuiTable-root css-8gffjp-MuiTable-root"
      >
        <thead
          class="MuiTableHead-root css-15wwp11-MuiTableHead-root"
        >
          <tr
            class="MuiTableRow-root MuiTableRow-head css-1oesa2-MuiTableRow-root"
          >
            <th
              class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall css-14upsjf-MuiTableCell-root"
              scope="col"
            >
              Rank Summary
            </th>
          </tr>
        </thead>
        <tbody
          class="MuiTableBody-root css-s46lqp-MuiTableBody-root"
        >
          <tr
            class="MuiTableRow-root css-1nqk75i-MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1iewrf7-MuiTableCell-root"
            >
              1
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1a09yu4-MuiTableCell-root"
            >
              FAFSA
            </td>
          </tr>
          <tr
            class="MuiTableRow-root css-1nqk75i-MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1iewrf7-MuiTableCell-root"
            >
              2
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1a09yu4-MuiTableCell-root"
            >
              SAT Scores
            </td>
          </tr>
          <tr
            class="MuiTableRow-root css-1nqk75i-MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1iewrf7-MuiTableCell-root"
            >
              3
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1a09yu4-MuiTableCell-root"
            >
              Website Inquiry
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`RankSummary ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiBox-root css-1varnae"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiTableContainer-root css-1020pp7-MuiPaper-root-MuiTableContainer-root"
    >
      <table
        class="MuiTable-root css-18d2ubk-MuiTable-root"
      >
        <thead
          class="MuiTableHead-root css-15wwp11-MuiTableHead-root"
        >
          <tr
            class="MuiTableRow-root MuiTableRow-head css-1fmkmr6-MuiTableRow-root"
          >
            <th
              class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall css-10us33w-MuiTableCell-root"
              scope="col"
            >
              Rank Summary
            </th>
          </tr>
        </thead>
        <tbody
          class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
        >
          <tr
            class="MuiTableRow-root css-12g4lsk-MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1l6y48q-MuiTableCell-root"
            >
              1
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-12e76jf-MuiTableCell-root"
            >
              FAFSA
            </td>
          </tr>
          <tr
            class="MuiTableRow-root css-12g4lsk-MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1l6y48q-MuiTableCell-root"
            >
              2
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-12e76jf-MuiTableCell-root"
            >
              SAT Scores
            </td>
          </tr>
          <tr
            class="MuiTableRow-root css-12g4lsk-MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1l6y48q-MuiTableCell-root"
            >
              3
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-12e76jf-MuiTableCell-root"
            >
              Website Inquiry
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`RankSummary ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiBox-root css-1varnae"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation2 MuiTableContainer-root css-1koyhi3-MuiPaper-root-MuiTableContainer-root"
    >
      <table
        class="MuiTable-root css-1i14dfv-MuiTable-root"
      >
        <thead
          class="MuiTableHead-root css-15wwp11-MuiTableHead-root"
        >
          <tr
            class="MuiTableRow-root MuiTableRow-head css-1kuw6lo-MuiTableRow-root"
          >
            <th
              class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall css-1p40uv9-MuiTableCell-root"
              scope="col"
            >
              Rank Summary
            </th>
          </tr>
        </thead>
        <tbody
          class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
        >
          <tr
            class="MuiTableRow-root css-1pp25qg-MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1yn6dax-MuiTableCell-root"
            >
              1
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-ek622e-MuiTableCell-root"
            >
              FAFSA
            </td>
          </tr>
          <tr
            class="MuiTableRow-root css-1pp25qg-MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1yn6dax-MuiTableCell-root"
            >
              2
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-ek622e-MuiTableCell-root"
            >
              SAT Scores
            </td>
          </tr>
          <tr
            class="MuiTableRow-root css-1pp25qg-MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1yn6dax-MuiTableCell-root"
            >
              3
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-ek622e-MuiTableCell-root"
            >
              Website Inquiry
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
